[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project3"
version = "1.0.0"
description = "This project aims to develop a script that applies visual filters to vidoes of human faces while preserving the core feature of facial expressions. The goal is to maintain the subtle nuances of facial movments even when applying transformative filters."
readme = "README.rst"
authors = [
  {name = "Shelly Gur", email = "shellygur4@gmail.com"}
]
maintainers = [
  {name = "Shelly Gur", email = "shellygur4@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Shellygur4/project3/issues"
changelog = "https://github.com/Shellygur4/project3/blob/master/changelog.md"
homepage = "https://github.com/Shellygur4/project3"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

